# Wrap

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  history_log.txt  install-nebula-wrapper.sh  install.sh  package-lock.json  package.json
.github/workflows/: Static.yml  ci.yml
apps/vscode/: package.json  tsconfig.json
apps/vscode/src/: auditTree.ts  chatPanel.ts  extension.ts  wrapClient.ts
apps/war-room/: next.config.js  package.json  tailwind.config.js
apps/war-room/src/app/: globals.css  layout.tsx  page.tsx
apps/war-room/src/components/: AgentStatus.tsx  MetricsPanel.tsx  ToolRegistry.tsx
crates/governor/: Cargo.toml  build.rs
crates/governor/proto/: governor.proto
crates/governor/src/: audit.rs  boundaries.rs  error.rs  ffi.rs  filters.rs  lib.rs  permissions.rs  rate_limiter.rs  sandbox.rs
crates/governor/src/filters/: injection.rs  mod.rs  pii.rs  profanity.rs
docs/: index.html
examples/weather-skill/: index.js  wrap-skill.json
policy/: default.yaml
scripts/: demo.sh  nebula  start-agent.ts  start.ts
site/: index.html
skills/default/: SOUL.md
src/core/: build_0.ts  build_1.ts  build_10.ts  build_11.ts  build_12.ts  build_13.ts  build_14.ts  build_2.ts  build_3.ts  build_4.ts  build_5.ts  build_6.ts  build_7.ts  build_8.ts  build_9.ts
tests/e2e/: test_workflows.py
tests/integration/: test_integration.py
