[package]
name = "wrap-governor"
version = "2.0.0"
edition = "2021"
description = "WRAP NEBULA Rust Safety Governor - Zero Trust security enforcement"
authors = ["WRAP NEBULA Team"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.7", features = ["v4"] }

[[bin]]
name = "governor"
path = "src/bin/governor.rs"

[lib]
name = "governor"
path = "src/lib.rs"
